done:wenslijsten wijzigen/verwijderen testen - operaties op wensen, -deelnemers aan lijst toevoegen/verwijderen etc TODO: opereties op wenscat testen(simpel dus skip

--- a/wishListClient/wishListClient.csproj
+++ b/wishListClient/wishListClient.csproj
@@ -117,7 +117,13 @@
     <Compile Include="User.cs" />
     <Compile Include="Wish.cs" />
     <Compile Include="WishCategory.cs" />
+    <Compile Include="WishDetail.xaml.cs">
+      <DependentUpon>WishDetail.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WishList.cs" />
+    <Compile Include="WistListDetail.xaml.cs">
+      <DependentUpon>WistListDetail.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -156,6 +162,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Register.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WishDetail.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WistListDetail.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
